[gd_scene load_steps=20 format=2]

[ext_resource path="res://BaseGD/pl3d/Player3d.gd" type="Script" id=1]
[ext_resource path="res://BaseGD/pl3d/TopDownCamera.gd" type="Script" id=2]
[ext_resource path="res://BaseGD/Guns/fusion_pistol.gd" type="Script" id=3]
[ext_resource path="res://BaseGD/Guns/fusion_bolt.tscn" type="PackedScene" id=4]
[ext_resource path="res://BaseGD/Guns/charged_fusion_bolt.tscn" type="PackedScene" id=5]
[ext_resource path="res://BaseGD/pl3d/FPSCamera.gd" type="Script" id=6]
[ext_resource path="res://BaseGD/pl3d/3RDPersCamera.gd" type="Script" id=7]
[ext_resource path="res://BaseGD/pl3d/3RDPersonCamera.gd" type="Script" id=8]
[ext_resource path="res://BaseGD/pl3d/label.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/Player_GUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/green-crosshair-png-4.png" type="Texture" id=11]

[sub_resource type="CapsuleShape" id=1]

radius = 0.39852
height = 1.2

[sub_resource type="CapsuleMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 0.348
mid_height = 1.0
radial_segments = 64
rings = 8

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.773438, 0.126892, 0.126892, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="SphereMesh" id=4]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 1.0
height = 2.0
radial_segments = 64
rings = 32
is_hemisphere = false

[sub_resource type="SpatialMaterial" id=5]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false

[sub_resource type="SphereShape" id=6]

radius = 0.245702

[sub_resource type="GDScript" id=8]

script/source = "extends Area

func _ready():
	var target = get_tree().get_root().get_node(\"HUD/Health|Radar/Radar\")
	connect(\"body_entered\", target, \"_on_body_entered\")
	connect(\"body_exited\" , target, \"_on_body_exit\")
	pass
"

[sub_resource type="SphereShape" id=7]

radius = 20.0

[node name="Player" type="KinematicBody" groups=[
"Player",
]]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
health = 100
turn_speed = 40
keep_jump_inertia = true
air_idle_deaccel = false
fixed_up = true
accel = 19.0
deaccel = 14.0
sharp_turn_threshold = 140
JumpHeight = 7.0
Team = 1
AllowChangeCamera = false
FPSCamera = true
thRDPersCamera = false
fixpos = 0.5
RPGCamera = false
TopDownCamera = false
WALKSPEED = 3.1
RUNSPEED = 4.5
Playermodel = null
active = true
view_sensitivity = 0.3
weight = 1
grav = 9.8

[node name="Collision" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 1, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Yaw" type="Spatial" parent="." index="1"]

editor/display_folded = true
visible = false
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Yaw" index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 1.05647, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance2" type="MeshInstance" parent="Yaw" index="1"]

transform = Transform( 0.246564, 0, 0, 0, -0.0585672, -0.239508, 0, 0.239508, -0.0585672, 0, 1.59028, -1.27401 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "material" ]

[node name="TopDownCamera" type="Camera" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 14.246, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="target" type="Spatial" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26883, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CameraOrigin" type="Spatial" parent="." index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.489479, 2.14343, 1.44329 )

[node name="Pivot" type="Position3D" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58644, 0 )
_sections_unfolded = [ "Transform" ]

[node name="weapon_point" type="Position3D" parent="Pivot" index="0"]

transform = Transform( 1, 0, 0, 0, 0.999999, 0.00161846, 0, -0.00161846, 0.999999, 0, -0.391506, -0.342788 )
script = ExtResource( 3 )
dual_wieldable = false
Fusion_Bolt = ExtResource( 4 )
Charged_Fusion_Bolt = ExtResource( 5 )

[node name="FPSCamera" type="Camera" parent="Pivot" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0436552, -0.265905 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 90.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SpotLight" type="SpotLight" parent="Pivot/FPSCamera" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0102543, 0.265905 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Spot" ]

[node name="3RDPersCamera" type="Camera" parent="Pivot" index="2"]

transform = Transform( 0.997858, -0.0247958, 0.0605398, 0.0132274, 0.982746, 0.184489, -0.0640698, -0.183292, 0.980968, 0.497637, 0.54344, 1.31724 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 90.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="CameraCollision" type="KinematicBody" parent="Pivot" index="3"]

transform = Transform( 0.999903, -1.86265e-009, -0.0139474, -0.00282001, 0.979347, -0.202169, 0.0136593, 0.202189, 0.979251, -0.00137392, 0.472392, 1.50019 )
input_ray_pickable = false
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/CameraCollision" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.476892, 0.0157118, -0.0391517 )
shape = SubResource( 6 )
disabled = false
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 46.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Default"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TextPoint" type="Position3D" parent="." index="7"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.07561, 0 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="8" instance=ExtResource( 10 )]

radarpath = NodePath("../Area")

[node name="Radar" parent="HUD/Health|Radar" index="4"]

Ppath = NodePath("../../../Area")

[node name="Inventory" type="ColorRect" parent="HUD" index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 84.0
margin_top = 145.0
margin_right = 584.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.00854492, 0.15625, 0, 0.491726 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Inventory" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="current_weapon" type="Label" parent="HUD/Inventory/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 103.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Current Weapon"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="in_magazine" type="Label" parent="HUD/Inventory/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 103.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Current Weapon"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ammo" type="Label" parent="HUD/Inventory/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 103.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Current Weapon"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureRect" type="TextureRect" parent="HUD" index="4"]

modulate = Color( 1, 1, 1, 0.353608 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Area" type="Area" parent="." index="9"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

shape = SubResource( 7 )
disabled = false


[editable path="HUD"]
